fix: edit param for get personal link
